various layout fixes

--- a/src/cases/components/bookmark-block.sass
+++ b/src/cases/components/bookmark-block.sass
@@ -48,7 +48,7 @@
 
       > h1
         font-size: 4rem
-        font-weight: normal
+        font-weight: 500
         white-space: pre-line
 
       > p
