--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -42,7 +42,7 @@
         > h1
           margin-bottom: 2rem
           font-size: 4rem
-          font-weight: normal
+          font-weight: 500
           white-space: pre-line
           text-align: center
           max-width: 80rem
