--- a/src/cases/components/projects-block.sass
+++ b/src/cases/components/projects-block.sass
@@ -21,7 +21,7 @@
 
       > h2
         font-size: 4rem
-        font-weight: normal
+        font-weight: 500
         margin-bottom: 3.5rem
 
       > .link
