--- a/src/cases/components/three-block.sass
+++ b/src/cases/components/three-block.sass
@@ -45,7 +45,7 @@
 
         > h1
           font-size: 4rem
-          font-weight: normal
+          font-weight: 500
 
         > p
           margin-top: 1.6rem
