--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -63,7 +63,7 @@
 
       > .menu
         align-items: center
-        background: rgba(#111722, 0.97)
+        background: radial-gradient(50% 100%, rgba(7,11,19,0.97) 0%, rgba(7,11,19,0.97) 100%)
         bottom: 0
         display: flex
         flex-direction: column
