--- a/src/components/moon.sass
+++ b/src/components/moon.sass
@@ -15,6 +15,7 @@
     top: 55%
     left: 60%
     transform: translate(-50%) translateY(-50%)
+    transition: margin 0.35s ease
 
     &.animate
       animation: float 5s ease-in-out infinite
@@ -56,6 +57,7 @@
       top: -2rem
       right: 5rem
       z-index: 99
+      transition: margin 0.35s ease
 
   // Moon size
   &.extraSmall
