--- a/src/fonts.sass
+++ b/src/fonts.sass
@@ -11,7 +11,7 @@
 @font-face
   font-family: 'Space Grotesk'
   font-weight: 500
-  src: url('(./fonts/SpaceGrotesk-Medium.woff2') format('woff2'), url('./fonts/SpaceGrotesk-Medium.woff') format('woff')
+  src: url('./fonts/SpaceGrotesk-Medium.woff2') format('woff2'), url('./fonts/SpaceGrotesk-Medium.woff') format('woff')
 
 @font-face
   font-family: 'Space Grotesk'
