--- a/src/cases/components/bookmark-block.sass
+++ b/src/cases/components/bookmark-block.sass
@@ -24,7 +24,10 @@
       display: flex
       flex-direction: column
       justify-content: center
-      padding-left: 5rem
+      padding-left: 0
+
+      > .text
+        margin-bottom: 2.5rem
 
       > .item
         margin-top: 2.6rem
