Various performance fixes

--- a/src/cases/components/brand-block.sass
+++ b/src/cases/components/brand-block.sass
@@ -37,7 +37,7 @@
         // stroke-dasharray: 0
         // stroke-dashoffset: 0
         // stroke-linecap: butt
-        transition: all 0.3s ease-in
+        transition: opacity 0.3s ease-in
 
     &:hover
       \:global(.brandLines)
