--- a/src/cases/components/projects-block.sass
+++ b/src/cases/components/projects-block.sass
@@ -39,7 +39,7 @@
           background: url('../../images/arrow-red.svg') no-repeat 0 0/100%
           width: 7.7rem
           height: 2.3rem
-          transition: all 0.2s ease
+          transition: margin 0.2s ease
 
         &:hover::after
           margin: 2rem 0 0 2.5rem
