--- a/src/components/button.sass
+++ b/src/components/button.sass
@@ -9,7 +9,7 @@
   font-weight: bold
   padding: 3rem 5rem
   position: relative
-  transition: all 0.2s ease
+  transition: box-shadow 0.2s ease
 
   &.fullsize
     display: flex
@@ -20,6 +20,7 @@
     padding: 4rem
     text-align: left
     width: 100%
+    transition: opacity 0.2s ease, margin 0.2s ease
 
     &:hover
       opacity: 1 !important
