--- a/src/components/team-block.sass
+++ b/src/components/team-block.sass
@@ -11,25 +11,11 @@
     z-index: 1
     display: flex
     align-items: flex-end
-    transition: all 0.2s ease
-
-    > .shine
-      content: ''
-      z-index: 3
-      position: absolute
-      top: 0
-      left: 0
-      width: 100%
-      height: 100%
-      opacity: 1
-      pointer-events: none
-      transition: opacity .2s ease
 
     > .inner
       padding: 3rem
       overflow: hidden
       margin-bottom: -1rem
-      transition: all 0.2s ease-in-out
 
       > h3
         font-size: 4rem
@@ -39,11 +25,11 @@
       > .desc
         font-size: 1.5rem
         line-height: 0rem
-        transition: opacity 0.3s ease-in-out
         opacity: 0
+        transition: line-height 0.2s ease-in-out, opacity 0.3s ease-in-out
 
         > p
-          transition: all 0.2s ease-in-out
+          transition: margin 0.2s ease-in-out
 
         > .desktop
           display: block
