Add 'careers' page

--- a/src/cases/components/projects-block.sass
+++ b/src/cases/components/projects-block.sass
@@ -8,7 +8,7 @@
     flex-direction: column
     margin: auto
     max-width: $max-width
-    padding: $global-padding 0
+    padding: $global-padding
     font-weight: normal
 
     > .block
