--- a/src/routes/team.sass
+++ b/src/routes/team.sass
@@ -8,10 +8,10 @@
     display: flex
     flex-direction: column
     height: 100%
-    width: 100%
     margin: 0 auto
     max-width: $max-width
     padding: 5rem 3rem
+    width: 100%
 
     > .text
       align-items: center
@@ -33,22 +33,21 @@
 
       > .moonDesktop
         left: -10rem
-        top: 110%
         position: absolute
+        top: 110%
         z-index: -1
 
       > .moonMobile
+        display: none
         left: calc(50% - 22.5rem)
         margin-top: -8rem
         position: absolute
-        display: none
 
     > .astronauts
       position: relative
 
       > .text
-        margin-left: 10rem
-        margin-bottom: 6rem
+        margin: 0 0 6rem 10rem
 
         > h1
           color: $color-red
@@ -62,16 +61,16 @@
 
     @media screen and (max-width: 800px)
       > .text > h1, > .astronauts > .text
-        margin-left: 0
         font-size: 3rem
+        margin-left: 0
 
       > .text
 
         > .moonDesktop
           left: auto
+          position: absolute
           right: calc(100% + 14rem)
           top: 120%
-          position: absolute
           z-index: -1
 
         > .moonMobile
