--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -23,8 +23,8 @@
       color: inherit
 
       > svg
-        width: 4rem
         position: relative
+        width: 4rem
 
     > .navMenu
       background: none
@@ -58,12 +58,13 @@
       &.open
         &:before
           transform: translateY(-.1rem) rotate(45deg)
+
         &:after
           transform: translateY(-.1rem) rotate(-45deg)
 
       > .menu
         align-items: center
-        background: radial-gradient(50% 100%, rgba(7,11,19,0.97) 0%, rgba(7,11,19,0.97) 100%)
+        background: radial-gradient(circle at top, rgba(7,11,19,0.97) 0%, rgba(7,11,19,0.97) 100%)
         bottom: 0
         display: flex
         flex-direction: column
@@ -91,8 +92,8 @@
             margin: 1.5rem 0
 
           @media screen and (max-height: 400px)
-            margin: 1rem 0
             font-size: 2rem
+            margin: 1rem 0
 
           @for $i from 1 through 4
             &:nth-child(#{$i})
