--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -8,10 +8,10 @@
     display: flex
     flex-direction: column
     height: 100%
-    width: 100%
     margin: 0 auto
     max-width: $max-width
     padding: 5rem 3rem
+    width: 100%
 
     > .welcome
       align-items: center
@@ -77,6 +77,7 @@
         top: 2rem
 
     > .work
+      margin-bottom: 26rem
       position: relative
 
       > .text
@@ -117,58 +118,14 @@
         position: absolute
         right: -10rem
 
-    > .team
-      margin-top: 26rem
-
-      > .text
-        margin-left: 10rem
-
-        > h1
-          color: $color-red
-
-        > p
-          font-size: 1.8rem
-          letter-spacing: 0.045rem
-          line-height: 2.5rem
-          margin-top: 2rem
-          max-width: 37.7rem
-
-      > .teamPictures
-        display: flex
-        flex-wrap: wrap
-        margin-top: 5rem
-        position: relative
-        right: 1rem
-        width: calc(100% + 2rem)
-
-        > .block
-          flex-basis: calc(66% - 2rem)
-          height: 33.5rem
-          margin: 1rem
-          overflow: hidden
-
-          &:nth-child(2n)
-            flex-basis: calc(34% - 2rem)
-
-          &:nth-child(3)
-            order: 4
-
-          &:nth-child(4)
-            order: 3
-
-          > img
-            min-height: 100%
-            object-fit: cover
-            width: 100%
-
     @media screen and (max-width: 1350px)
       > .information > .foundationPillar
         left: -2rem
 
     @media screen and (max-width: 800px)
-      > .welcome > h1, > .work > .text, > .team > .text
-        margin-left: 0
+      > .welcome > h1, > .work > .text
         font-size: 3rem
+        margin-left: 0
 
       > .information > p, > .work > .text > p
         font-size: 1.6rem
@@ -186,11 +143,3 @@
 
       > .work > button
         left: 100%
-
-      > .team > .teamPictures
-        display: block
-        width: 100vw
-        left: -3rem
-
-        > .block:last-child
-          height: 20rem
