--- a/src/routes/careers.sass
+++ b/src/routes/careers.sass
@@ -170,6 +170,9 @@
             flex-direction: row-reverse
 
     @media screen and (max-width: 800px)
+      > .heroText
+        min-height: 60rem
+
       > .heroText > h1, > .workplaces > .text, > .positions > .text
         font-size: 3rem
         margin-left: 0
