--- a/src/routes/team.sass
+++ b/src/routes/team.sass
@@ -60,6 +60,9 @@
           max-width: 37.7rem
 
     @media screen and (max-width: 800px)
+      > .text
+        min-height: 60rem
+
       > .text > h1, > .astronauts > .text
         font-size: 3rem
         margin-left: 0
