--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -93,7 +93,7 @@
           margin-top: 2rem
           max-width: 37.7rem
 
-      > button
+      > .button
         left: calc(100% - 10rem)
         position: relative
         top: 2rem
@@ -141,5 +141,5 @@
         right: auto
         top: 2rem
 
-      > .work > button
+      > .work > .button
         left: 100%
