--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -72,7 +72,7 @@
         left: 0
         list-style: none
         opacity: 0
-        pointer-events: none
+        cursor: default
         position: fixed
         right: 0
         top: 0
@@ -83,7 +83,8 @@
         > li
           font-size: 3rem
           font-weight: bold
-          margin: 2rem 0
+          margin: 1.5rem 0
+          padding: 0.5rem
           opacity: 0
           pointer-events: auto
           transform: translateX(-8rem)
@@ -95,7 +96,7 @@
             font-size: 2rem
             margin: 1rem 0
 
-          @for $i from 1 through 4
+          @for $i from 1 through 5
             &:nth-child(#{$i})
               transition-duration: #{0.1 + $i * 0.1}s
 
