--- a/src/components/card.sass
+++ b/src/components/card.sass
@@ -1,6 +1,8 @@
 .card
   position: relative
-  transition: transform 0.1s ease-in-out
+
+  &.ease
+    transition: transform 0.2s ease
 
   &:hover
     opacity: 1
