--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -77,7 +77,8 @@
         top: 2rem
 
     > .work
-      margin-bottom: 26rem
+      margin-top: 10rem
+      margin-bottom: 27rem
       position: relative
 
       > .text
