Add 'Antistress' showcase

--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -108,3 +108,9 @@
 
           > a:not(:last-child)
             margin-right: 1rem
+
+  &.antistress
+
+   > .inner > .content > .block
+     background: linear-gradient(-90deg, rgba(0,0,0,0.00) 0%, rgba(255,255,255,0.10) 30%, rgba(255,255,255,0.10) 70%, rgba(0,0,0,0.00) 100%)
+
