--- a/src/routes/work.sass
+++ b/src/routes/work.sass
@@ -10,7 +10,7 @@
     height: 100%
     margin: 0 auto
     max-width: $max-width
-    padding: 5rem 3rem
+    padding: 5rem 3rem 25rem
     width: 100%
 
     > .welcome
