--- a/src/components/team-pictures.sass
+++ b/src/components/team-pictures.sass
@@ -44,7 +44,7 @@
         object-fit: cover
         width: 100%
 
-      &:after
+      &.filter:after
         content: ''
         height: 100%
         width: 100%
@@ -52,7 +52,7 @@
         position: absolute
         top: 0
         left: 0
-        z-index: 121211
+        z-index: 1
         opacity: 0.3
         background: rgba(4,21,54,0.70)
 
