--- a/src/components/card.sass
+++ b/src/components/card.sass
@@ -18,3 +18,22 @@
     opacity: 1
     pointer-events: none
     transition: opacity .2s ease
+
+  &.viewCase:hover
+    \:global(.slideArrow)
+      > svg
+        &:first-child
+          //transition-delay: 0.27s !important
+          transition: transform 0.2s 0.3s ease, opacity 0.3s 0.3s ease !important
+          transform: translateX(20px)
+          opacity: 1 !important
+
+        &:last-child
+          opacity: 0
+          transform: translateX(145px)
+          transition-delay: 0s !important
+
+      > span
+        opacity: 1
+        transition-delay: 0.2s !important
+        transform: translateX(55px)
