--- a/src/components/card.sass
+++ b/src/components/card.sass
@@ -23,17 +23,16 @@
     \:global(.slideArrow)
       > svg
         &:first-child
-          //transition-delay: 0.27s !important
           transition: transform 0.2s 0.3s ease, opacity 0.3s 0.3s ease !important
-          transform: translateX(20px)
+          transform: translateX(20px) !important
           opacity: 1 !important
 
         &:last-child
-          opacity: 0
-          transform: translateX(145px)
+          opacity: 0 !important
+          transform: translateX(145px) !important
           transition-delay: 0s !important
 
       > span
-        opacity: 1
+        opacity: 1 !important
         transition-delay: 0.2s !important
-        transform: translateX(55px)
+        transform: translateX(55px) !important
