--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -47,6 +47,15 @@
         left: -10rem
         position: absolute
 
+        > h2
+          position: relative
+          transform: translateX(20rem) translateZ(0)
+          opacity: 0
+
+          @for $i from 1 through 3
+            &:nth-child(#{$i})
+              transition: transform 0.3s #{0.2 * $i}s ease, opacity 0.3s #{0.2 * $i}s ease
+
         &:after
           background-image: linear-gradient(90deg, rgba(7,11,19,0.00) 0%, #070B13 85%)
           content: ''
@@ -60,21 +69,43 @@
           font-size: 14rem
           line-height: 14rem
           text-transform: uppercase
+          transition: color 0.5s ease
+
+          &.active
+            color: #2C446F
 
       > p
         font-size: 2.4rem
         max-width: 56.3rem
-        position: relative
+        position: absolute
         text-align: center
         z-index: 1
+        opacity: 0
+        visibility: hidden
+        transition: opacity 0.5s ease, visibility 0.5s ease
+
+        &.active
+          opacity: 1
+          visibility: visible
 
         > span
-          color: $color-red
+          font-weight: bold
 
       > .moon
+        transition: opacity 0.7s ease
+        opacity: 0
         position: absolute
         right: -18rem
         top: 2rem
+
+      &.inView
+        > .foundationPillar
+          > h2
+            transform: translateX(0) translateZ(0)
+            opacity: 1
+
+        > .moon
+          opacity: 1
 
     > .work
       margin-top: 10rem
