--- a/src/routes/careers.sass
+++ b/src/routes/careers.sass
@@ -189,6 +189,7 @@
 
               > h3
                 font-size: 3rem
+                white-space: pre
 
             > p
               line-height: 2.4rem
