Add better 'Card' arrow transition

--- a/src/components/card.sass
+++ b/src/components/card.sass
@@ -23,16 +23,16 @@
     \:global(.slideArrow)
       > svg
         &:first-child
-          transition: transform 0.2s 0.3s ease, opacity 0.3s 0.3s ease !important
-          transform: translateX(20px) !important
+          transition: transform 0.2s 0.3s ease, opacity 0.3s 0.35s ease !important
+          transform: translateX(80px) !important
           opacity: 1 !important
 
         &:last-child
           opacity: 0 !important
-          transform: translateX(145px) !important
+          transform: translateX(40px) !important
           transition-delay: 0s !important
 
       > span
         opacity: 1 !important
         transition-delay: 0.2s !important
-        transform: translateX(55px) !important
+        margin-left: 5.5rem
