--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -51,10 +51,12 @@
 
         > p
           font-size: 2rem
-          max-width: 74rem
           line-height: 2.8rem
+          max-width: 74rem
           opacity: 0.8
+          position: relative
           white-space: pre-line
+          z-index: 2
 
         > a:not(:last-child)
           margin-right: 2rem
@@ -110,7 +112,12 @@
             margin-right: 1rem
 
   &.antistress
-
-   > .inner > .content > .block
-     background: linear-gradient(-90deg, rgba(0,0,0,0.00) 0%, rgba(255,255,255,0.10) 30%, rgba(255,255,255,0.10) 70%, rgba(0,0,0,0.00) 100%)
-
+   > .inner > .content > .block > p:before
+     background: linear-gradient(-90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 20%, rgba(255,255,255,0.8) 80%, rgba(255,255,255,0) 100%)
+     content: ''
+     height: 16rem
+     left: -6rem
+     position: absolute
+     top: -2.5rem
+     width: calc(100% + 12rem)
+     z-index: -1
