Add overflow: hidden (DDS block)

--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -47,6 +47,7 @@
       > .foundationPillar
         left: -10rem
         position: absolute
+        overflow: hidden
 
         > h2
           position: relative
@@ -66,7 +67,7 @@
           height: 100%
           position: absolute
           top: 0
-          width: 100%
+          width: 110%
 
         > h2
           color: #0E1626
