--- a/src/routes/careers.sass
+++ b/src/routes/careers.sass
@@ -1,4 +1,5 @@
 @import '../settings.sass'
+@import '../animations.sass'
 
 .view
   overflow-x: hidden
@@ -28,6 +29,8 @@
         position: relative
         white-space: pre-line
         z-index: 1
+        opacity: 0
+        animation: slideInLeft 0.3s forwards
 
         > span
           color: $color-red
