--- a/src/routes/team.sass
+++ b/src/routes/team.sass
@@ -1,4 +1,5 @@
 @import '../settings.sass'
+@import '../animations.sass'
 
 .view
   overflow-x: hidden
@@ -27,6 +28,10 @@
         max-width: 84rem
         position: relative
         z-index: 1
+        opacity: 0
+        animation: slideInLeft 0.3s forwards
+        opacity: 0
+        animation: slideInLeft 0.3s forwards
 
         > span
           color: $color-red
