--- a/src/cases/components/slide-in-block.sass
+++ b/src/cases/components/slide-in-block.sass
@@ -53,14 +53,13 @@
         opacity: 0.8
         white-space: pre-line
 
-  &.tennisWatch
-    &.inView
-      background-image: url('../../images/cases/tennis-watch-path-background.svg')
-      background-position-y: calc(50% + 150px)
-      background-repeat: no-repeat
-      width: 100%
-      height: 100%
-      background-size: 101%
+  \:global(.tennisWatchShowPath)
+    background-image: url('../../images/cases/tennis-watch-path-background.svg')
+    background-position-y: calc(50% + 150px)
+    background-repeat: no-repeat
+    width: 100%
+    height: 100%
+    background-size: 101%
 
   &.noPadding
     > .slider
