--- a/src/index.sass
+++ b/src/index.sass
@@ -47,7 +47,7 @@ h1
   transform: none !important
   opacity: 1 !important
 
-.inViewBottom, .inViewRight
+.inViewBottom, .inViewRight, .inViewLeft
   opacity: 0
   transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out
 
@@ -56,3 +56,6 @@ h1
 
 .inViewRight
   transform: translateX(5rem) translateZ(0)
+
+.inViewLeft
+  transform: translateX(-5rem) translateZ(0)
